acesso ao banco de dados , obtencao e inserção de dados| endpoints de log, classes de teste ''

--- a/string.stream/src/main/resources/application.yaml
+++ b/string.stream/src/main/resources/application.yaml
@@ -5,12 +5,9 @@ spring:
     driverClassName: com.mysql.jdbc.Driver
     url: jdbc:mysql://localhost:3306/stream 
   jpa:
+    show_sql: true
+    hibernate:
+      ddl-auto: create-drop
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.Oracle10gDialect
-#    jpa:
-#      show-sql: true
-#      hibernate:
-#        ddl-auto: create-drop
-#      properties:
-#        hibernate.dialect: org.hibernate.dialect.MySQLDialect
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
