--- a/string.stream/src/main/resources/application.yaml
+++ b/string.stream/src/main/resources/application.yaml
@@ -1,9 +1,9 @@
 spring:
   datasource:
-    username: root
-    password: K4llil01
+    username: stream
+    password: stream
     driverClassName: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/stream 
+    url: jdbc:mysql://dockerrest_mysql_1:3306/stream?useSSL=false 
   jpa:
     show_sql: true
     hibernate:
